--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!-- Kitten image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
+<h1>I'm a cat person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="Someone holding a kitten">
+
 
 
 <!-- Puppy image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+<!-- https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif -->
